@@ -255,7 +255,6 @@ noinst_HEADERS = AddFileThread.h \
 		 Friend.h \
 		 FriendListCtrl.h \
 		 GetTickCount.h \
-		 gsocket-2.5.h \
 		 gsocket-fix.h \
 		 gsocket.h \
 		 gtk2-funcs.h \
